Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.1.0 Beta2
-
Fix Version/s: 6.1.0 RC
-
Component/s: Build System: CMake, Build tools: androiddeployqt
-
Labels:None
-
Commits:20db8dbeeb808edce683e34de10498ee2cdda0fc (qt/qtbase/dev) 66598931d8107acb2d8cf6f2034aa38bbd9ee7bc (qt/qtbase/6.1)
Description
androiddeployqt contains some hardcoded paths that might not be the correct ones anymore, with 6.1:
main.cpp: rcc = options.qtInstallDirectory + QLatin1String("/bin/rcc");
Note that , depending on the platform, rcc is now in libexec directory.